--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,15 @@ dependencies:
   cupertino_icons: ^1.0.2
   lottie: ^2.0.0
   http: ^0.13.5
+  flutter_launcher_icons: ^0.13.1
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/happy.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
