--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "memes_app" "\0"
+            VALUE "FileDescription", "Programming memes" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "memes_app" "\0"
+            VALUE "InternalName", "Programming memes" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "memes_app.exe" "\0"
-            VALUE "ProductName", "memes_app" "\0"
+            VALUE "ProductName", "Programming memes" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
