--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   lottie: ^2.0.0
   http: ^0.13.5
   flutter_launcher_icons: ^0.13.1
+  flutter_card_swiper: ^6.0.0
   
 dev_dependencies:
   flutter_test:
